# KaspBot

./: .dockerignore  .env  .gitignore  CREDITS.md  Dockerfile  README.md  _kaspBot.py  bootloader.py  main.py  notes.txt  pyproject.toml  requirements.txt
cogs/: AdminCommands.py  Commands.py  LoopingFunctions.py  OnEvent.py
config/: EXAMPLEconfig.json  bot.json  botInfo.json  config.json  getConfig.py  getSetting.py
data/: mutes.database.json  tickets.database.json
database/: boops.db  cogs.db  hugs.db  status.json  uptime.db  verification.json
modules/botMaintenance/: appCommand_Errors.py  cog_controller.py
modules/config/: getConfig.py  loadConfigs.py
modules/fun/: statusRotate.py
modules/logging/: adminCommandLogs.py  adminCommandLogsMessage.py  debugLog.py  userActions.py  userCommandLogs.py  userEventLog.py
modules/messageFilter/: filter.py  messageFilter.py
modules/messageLogger/: onMessageDelete.py  onMessageEdit.py
modules/utilities/: chatPurge.py  modTickets.py  reactionRolesClasses.py  verification.py  warn.py
modules/utilities/adminTools/: chatPurge.py  verification.py
modules/utilities/mutes/: channelMutes.py  muteMaintenance.py  muteManager.py
resources/: statusMessages.json
src/: _kaspBot.py
src/commands/: about.py  boop.py  bot_control.py  hug.py  unverified_purge.py  warn.py
src/functions/: attachmentLogging.py  boop.py  status.py  verification.py
src/modules/: README  checks.py  cogs.py  logging.py
